# sdg_nexus

./: .gitignore  HANDOVER_RECURSE_BUG.md  README.JA.md  README.md  mabel_v2.md  pyproject.toml  requirements.txt
docs/: 3d_scaling.md  mabel_doc.md  mabel_v2.md  phase2_optimization.md  usage.ja.md  usage.md  usage.prompts.ja.md  usage.prompts.md
docs/mabel/: mabel_doc.md  mabel_v2_en.md
docs/others/: sdg_run_functional_tests.md
examples/: 3d_scaling_agent.yaml  helpers.py  prompt_evolution_agent.yaml  prompt_evolution_agent_loop.yaml  question_generator_agent.yaml  question_generator_agent_v2.yaml  run_sdg_example.py  run_sdg_v2_demo.py  sdg_comprehensive_v2.yaml  sdg_demo.yaml  sdg_demo_v2.yaml  vision_demo.yaml
examples/data/: 3d_scaling_input.jsonl  input.csv  input.jsonl  prompt_evolution_input.jsonl  question_generator_input.jsonl  vision_demo_input.jsonl
examples/helpers/: __init__.py  comprehensive_helpers.py  format_helpers.py  prompt_evolution_helpers.py  question_generator_helpers.py  question_generator_v2_helpers.py  scaling_3d_helpers.py
examples/scripts/: run_sdg_example.py  run_sdg_v2_demo.py
sdg/: __init__.py  __main__.py  cli.py  config.py  executors.py  io.py  llm_client.py  logger.py  mex.py  runner.py  utils.py
sdg/adaptive/: __init__.py  batcher.py  controller.py  metrics.py
sdg/executors/: __init__.py  ai.py  core.py  logic.py  pipeline.py  pipeline_adaptive.py  pipeline_batched.py  pipeline_core.py  pipeline_legacy.py  pipeline_streaming.py  python.py  scheduling.py
sdg/runners/: __init__.py  adaptive.py  batched.py  legacy.py  (+2 more)
