[project]
name = "sdg"
version = "0.1.0"
description = "SDG (Scalable Data Generator): YAML-driven, OpenAI-compatible batch data generator/transformer."
authors = [{name="SDG Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.1",
    "openai>=1.40.0",
    "tqdm>=4.66.0",
    "httpx[http2]>=0.25.0",
    "aiofiles>=23.2.0",
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "datasets>=2.14.0",
    "rich>=13.0.0",
    "orjson>=3.9.0",
]

[project.scripts]
sdg = "sdg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdg*"]
exclude = ["output*", "examples*", "docs*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
